Updated a few things on the index page as well as some responsiveness issues with images on mobile.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -34,7 +34,11 @@ body {
 }
 
 @media screen and (max-width: 768px) {
-    body { padding-top: 0px; }
+    body { margin-top: 50px; }
+}
+
+@media screen and (max-width: 500px) {
+    body { margin-top: 50px; }
 }
 
 .footer {
@@ -52,7 +56,7 @@ html {
 }
 
 main > .container {
-  padding: 70px 15px 0;
+  padding: 35px 15px 0;
 }
 
 .navbar-custom{
@@ -66,6 +70,19 @@ main > .container {
 .navbar img {
     width: 80px;
     height: auto;
+}
+
+.title-jumbo{
+    border: 1px solid rgba(0,0,0,.125);
+    background: #FFFFFF;
+    box-shadow: 10px 10px 10px rgba(0,0,0, 0.5);
+    min-width: 356px;
+    text-align: center;
+    padding-top: 15px;
+}
+
+.page-footer{
+  margin-top: 20px;
 }
 
 
